# todo_with_GenAI_GPT

./: README.md
Todo_API_GPT/: compose.yaml
Todo_API_GPT/backend/todoAPI/: .env  Dockerfile.dev  pyproject.toml
Todo_API_GPT/backend/todoAPI/app/: main.py
Todo_API_GPT/backend/todoAPI/app/Configuration/: settings.py
Todo_API_GPT/backend/todoAPI/app/Database/: database.py
Todo_API_GPT/backend/todoAPI/app/Models/: models.py
